Scrollbar issue/spacing issue resolved Further styling to products section done.

--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+::-webkit-scrollbar {
+    width: 0em;
+}
+
 body {
     height: 100vh;
-    overflow: none;
+    width: 100vw;
+    overflow-x: hidden;
     margin: 0px;
     padding: 0;
     display: flex;
-    /* gap: 16px; */
+
+    font-family: "Poppins", sans-serif, serif;
 
     /* Debugging */
     background-color: #040509;
@@ -17,6 +23,15 @@ body {
 
     display: flex;
     flex-direction: column;
+}
+
+.rounded {
+    border-radius: 25px;
+}
+
+.title {
+    font-size: 24px;
+    font-weight: 600;
 }
 
 .header {
@@ -41,7 +56,7 @@ body {
 }
 
 .content {
-    flex: 8 1 auto;
+    flex: 9 1 auto;
 
     display: flex;
     flex-direction: column;
@@ -55,44 +70,58 @@ body {
 .products-section {
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
 }
 
 .products-section-title {
+    /* flex: 1 1 auto; */
     text-align: center;
 }
 
 .products {
-    flex: 1 1 0;
+    /* flex: 2 1 0; */
     
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    gap: 16px;
+    gap: 32px;
 
     /* Debugging */
     /* background-color: blue; */
 }
 
 .product-box {
-    flex: 1 1 100;
-    /* width: auto; */
+    /* padding: 8px; */
+    margin: 8px;
+    /* flex: 1 1 auto; */
+    max-width: 300px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* text-align: center; */
+
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    /* align-items: center; */
 
     /* Debugging */
-    background-color: greenyellow;
+    background-color: purple;
 }
 
 .product-box img {
-    width: 100px;
-    height: auto;
+    flex:  1 1 auto;
+    border-radius: 25px 25px 0px 0px;
+    width: 300px;
+}
+
+.product-box p {
+    /* flex: 1 1 auto; */
 }
 
 .customer-reviews {
     /* flex: 1 1 auto; */
+    margin: 0px;
+    padding: 16px;
 
     display: flex;
     flex-direction: column;
@@ -124,7 +153,7 @@ body {
 }
 
 .store-call-to-action {
-    flex: 1 1 auto;
+    /* flex: 1 1 auto; */
     
     display: flex;
     justify-content: center;
@@ -154,6 +183,7 @@ body {
 }
 
 .footer {
+    flex: 1 1 auto;
     margin: 8px;
     padding: 0;
 
